--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,6 @@
 .bg {
     height: 100vh;
-    background: rgb(134, 190, 218);
+    background: #eee;
 }
 
 .container {
@@ -10,37 +10,55 @@
 }
 
 .main-board {
-    background: rgb(76, 73, 73);
+    background: #191A25;
     border-radius: 0 0 10px 10px;
+    padding: 8px 16px;
+    color: #E0F3FE;
+}
+
+::-webkit-scrollbar {
+    width: 0px;
+    height: 0px;
 }
 
 .title {
-    color: #fff;
+    color: #E9FBFF;
     display: flex;
     justify-content: center;
     align-items: center;
-    background: rgb(67, 67, 144);
+    background: #3D4151;
     height: 60px;
     border-radius: 10px 10px 0 0;
+    padding: 40px;
 }
 
 #outputResult {
-    overflow: auto;
-    height: 200px;
+    overflow: scroll;
+    height: 32em;
 }
 
 .nes-input {
+    color: #E9FBFF;
     border-radius: 10px;
+    background: #3D4151;
+}
+
+.nes-input:focus {
+    outline: none;
+}
+
+::placeholder {
+    color: #E9FBFF;
 }
 
 .os {
-    color: green;
+    color: #73AE98;
 }
 
 .at {
-    color: purple;
+    color: #FAAF13;
 }
 
 .na {
-    color: blue;
+    color: #FFFF93;
 }
